--- a/homepage/package.json
+++ b/homepage/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/luxon": "^3.7.1",
     "daisyui": "^5.3.10",
     "lucide-react": "^0.552.0",
+    "luxon": "^3.7.2",
     "next": "16.0.1",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
