--- a/homepage/package.json
+++ b/homepage/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/luxon": "^3.7.1",
     "daisyui": "^5.3.10",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.552.0",
     "luxon": "^3.7.2",
     "next": "16.0.1",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
