--- a/homepage/package.json
+++ b/homepage/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.552.0",
     "luxon": "^3.7.2",
     "next": "16.0.1",
+    "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
