--- a/homepage/package.json
+++ b/homepage/package.json
@@ -9,14 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.0.1",
     "@types/luxon": "^3.7.1",
     "daisyui": "^5.3.10",
+    "i": "^0.3.7",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.552.0",
     "luxon": "^3.7.2",
     "next": "16.0.1",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
+    "npm": "^11.6.2",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
